# native-symbolic-execution-clang

./: CMakeLists.txt  CrvTransform.cpp  CrvTransform.h  Makefile  NseTransform.cpp  NseTransform.h  README.md
tool/: CMakeLists.txt  ClangCrv.cpp  ClangNse.cpp  Makefile  nse-rewrite.sh
